editor/typedbnf/src/grammar/TBNFParser.ts

import * as antlr from "antlr4ng";
import { Token } from "antlr4ng";

import { TBNFListener } from "./TBNFListener.js";
// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;


import { MKTApp, MKTConst, MKTFun, MKTList, MKTTuple, MKTVar, monot_t, MKMono, MKPoly, polyt_t, MKDeclctor, MKDecltype, MKDeclvar, MKDefignore, MKDeflexer, MKDefmacro, MKDefrule, definition_t, MKproduction, production_t, MKMacrocall, MKNonterm, MKTerm, symbol_t, MKExpr, expr_t, MKEApp, MKEBool, MKEField, MKEFlt, MKEFun, MKEInt, MKELet, MKEList, MKESlot, MKEStr, MKETuple, MKEVar, node_t, MKLGroup, MKLNot, MKLNumber, MKLOptional, MKLOr, MKLPlus, MKLRef, MKLSeq, MKLStar, MKLStr, MKLWildcard, UnicodeRange, getrange, lexerule_t, position_t, getPos, toFloat, toInt, process_tparam, snd, fst, list_index, mkpos, str, unescape, addList } from "./TBNFConstructor"


export class TBNFParser extends antlr.Parser {
    public static readonly T__0 = 1;
    public static readonly T__1 = 2;
    public static readonly T__2 = 3;
    public static readonly T__3 = 4;
    public static readonly T__4 = 5;
    public static readonly T__5 = 6;
    public static readonly T__6 = 7;
    public static readonly T__7 = 8;
    public static readonly T__8 = 9;
    public static readonly T__9 = 10;
    public static readonly T__10 = 11;
    public static readonly T__11 = 12;
    public static readonly T__12 = 13;
    public static readonly T__13 = 14;
    public static readonly T__14 = 15;
    public static readonly T__15 = 16;
    public static readonly T__16 = 17;
    public static readonly T__17 = 18;
    public static readonly T__18 = 19;
    public static readonly T__19 = 20;
    public static readonly T__20 = 21;
    public static readonly T__21 = 22;
    public static readonly T__22 = 23;
    public static readonly T__23 = 24;
    public static readonly T__24 = 25;
    public static readonly T__25 = 26;
    public static readonly T__26 = 27;
    public static readonly T__27 = 28;
    public static readonly T__28 = 29;
    public static readonly T__29 = 30;
    public static readonly T__30 = 31;
    public static readonly T__31 = 32;
    public static readonly UNICODE_RANGE = 33;
    public static readonly RANGE = 34;
    public static readonly CNAMEPLUS = 35;
    public static readonly INT = 36;
    public static readonly WS = 37;
    public static readonly FLOAT = 38;
    public static readonly ESCAPED_STRING = 39;
    public static readonly CPP_COMMENT = 40;
    public static readonly C_COMMENT = 41;
    public static readonly RULE_start = 0;
    public static readonly RULE_list_o_toplevel_p_ = 1;
    public static readonly RULE_start__y_ = 2;
    public static readonly RULE_identstr = 3;
    public static readonly RULE_typ = 4;
    public static readonly RULE_slist_o__i__s__i__s_param_type_p_ = 5;
    public static readonly RULE_empty_o_slist_o__i__s__i__s_param_type_p__p_ = 6;
    public static readonly RULE_eslist_o__i__s__i__s_param_type_p_ = 7;
    public static readonly RULE_arrow_typ = 8;
    public static readonly RULE_slist_o__i__s__i__s_typ_p_ = 9;
    public static readonly RULE_typ2 = 10;
    public static readonly RULE_type_product = 11;
    public static readonly RULE_top_typ = 12;
    public static readonly RULE_tvar_str = 13;
    public static readonly RULE_param_type = 14;
    public static readonly RULE_slist_o__i__s__i__s_tvar_str_p_ = 15;
    public static readonly RULE_type_params = 16;
    public static readonly RULE_field_ann = 17;
    public static readonly RULE_slist_o__i__s__i__s_field_ann_p_ = 18;
    public static readonly RULE_empty_o_slist_o__i__s__i__s_field_ann_p__p_ = 19;
    public static readonly RULE_eslist_o__i__s__i__s_field_ann_p_ = 20;
    public static readonly RULE_field_anns = 21;
    public static readonly RULE_decl = 22;
    public static readonly RULE_toplevel = 23;
    public static readonly RULE_slist_o__i__s__i__s_identstr_p_ = 24;
    public static readonly RULE_def = 25;
    public static readonly RULE_productions = 26;
    public static readonly RULE_list_o_psym_p_ = 27;
    public static readonly RULE_empty_o_list_o_psym_p__p_ = 28;
    public static readonly RULE_elist_o_psym_p_ = 29;
    public static readonly RULE_production = 30;
    public static readonly RULE_slist_o__i__s__i__s_psym_p_ = 31;
    public static readonly RULE_psym = 32;
    public static readonly RULE_ann = 33;
    public static readonly RULE_slist_o__i__s__i__s_ann_p_ = 34;
    public static readonly RULE_empty_o_slist_o__i__s__i__s_ann_p__p_ = 35;
    public static readonly RULE_eslist_o__i__s__i__s_ann_p_ = 36;
    public static readonly RULE_func_parameters = 37;
    public static readonly RULE_expr = 38;
    public static readonly RULE_call = 39;
    public static readonly RULE_empty_o_slist_o__i__s__i__s_expr_p__p_ = 40;
    public static readonly RULE_eslist_o__i__s__i__s_expr_p_ = 41;
    public static readonly RULE_slist_o__i__s__i__s_expr_p_ = 42;
    public static readonly RULE_atomexp = 43;
    public static readonly RULE_slist_o__i__u__i__s_lexer_and_p_ = 44;
    public static readonly RULE_lexer__y_ = 45;
    public static readonly RULE_list_o_lexer_atomexpr_p_ = 46;
    public static readonly RULE_lexer_and = 47;
    public static readonly RULE_lexer_atomexpr = 48;
    public static readonly RULE_lexer_atom = 49;
    public static readonly RULE_lexerdef = 50;

    public static readonly literalNames = [
        null, "','", "'->'", "'('", "')'", "'<'", "'>'", "'*'", "':'", "'extern'", 
        "'var'", "'case'", "'type'", "'ignore'", "'|'", "'{'", "'}'", "'let'", 
        "'='", "'in'", "'fun'", "';'", "'$'", "'['", "']'", "'.'", "'true'", 
        "'false'", "'+'", "'?'", "'!'", "'\\d'", "'_'"
    ];

    public static readonly symbolicNames = [
        null, null, null, null, null, null, null, null, null, null, null, 
        null, null, null, null, null, null, null, null, null, null, null, 
        null, null, null, null, null, null, null, null, null, null, null, 
        "UNICODE_RANGE", "RANGE", "CNAMEPLUS", "INT", "WS", "FLOAT", "ESCAPED_STRING", 
        "CPP_COMMENT", "C_COMMENT"
    ];
    public static readonly ruleNames = [
        "start", "list_o_toplevel_p_", "start__y_", "identstr", "typ", "slist_o__i__s__i__s_param_type_p_", 
        "empty_o_slist_o__i__s__i__s_param_type_p__p_", "eslist_o__i__s__i__s_param_type_p_", 
        "arrow_typ", "slist_o__i__s__i__s_typ_p_", "typ2", "type_product", 
        "top_typ", "tvar_str", "param_type", "slist_o__i__s__i__s_tvar_str_p_", 
        "type_params", "field_ann", "slist_o__i__s__i__s_field_ann_p_", 
        "empty_o_slist_o__i__s__i__s_field_ann_p__p_", "eslist_o__i__s__i__s_field_ann_p_", 
        "field_anns", "decl", "toplevel", "slist_o__i__s__i__s_identstr_p_", 
        "def", "productions", "list_o_psym_p_", "empty_o_list_o_psym_p__p_", 
        "elist_o_psym_p_", "production", "slist_o__i__s__i__s_psym_p_", 
        "psym", "ann", "slist_o__i__s__i__s_ann_p_", "empty_o_slist_o__i__s__i__s_ann_p__p_", 
        "eslist_o__i__s__i__s_ann_p_", "func_parameters", "expr", "call", 
        "empty_o_slist_o__i__s__i__s_expr_p__p_", "eslist_o__i__s__i__s_expr_p_", 
        "slist_o__i__s__i__s_expr_p_", "atomexp", "slist_o__i__u__i__s_lexer_and_p_", 
        "lexer__y_", "list_o_lexer_atomexpr_p_", "lexer_and", "lexer_atomexpr", 
        "lexer_atom", "lexerdef",
    ];

    public get grammarFileName(): string { return "TBNF.g4"; }
    public get literalNames(): (string | null)[] { return TBNFParser.literalNames; }
    public get symbolicNames(): (string | null)[] { return TBNFParser.symbolicNames; }
    public get ruleNames(): string[] { return TBNFParser.ruleNames; }
    public get serializedATN(): number[] { return TBNFParser._serializedATN; }

    protected createFailedPredicateException(predicate?: string, message?: string): antlr.FailedPredicateException {
        return new antlr.FailedPredicateException(this, predicate, message);
    }

    public constructor(input: antlr.TokenStream) {
        super(input);
        this.interpreter = new antlr.ParserATNSimulator(this, TBNFParser._ATN, TBNFParser.decisionsToDFA, new antlr.PredictionContextCache());
    }
    public start(): StartContext {
        let localContext = new StartContext(this.context, this.state);
        this.enterRule(localContext, 0, TBNFParser.RULE_start);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 102;
            localContext._v = this.start__y_();
            this.state = 103;
            this.match(TBNFParser.EOF);
             localContext!.result = localContext._v.result; 
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }

    public list_o_toplevel_p_(): List_o_toplevel_p_Context;
    public list_o_toplevel_p_(_p: number): List_o_toplevel_p_Context;
    public list_o_toplevel_p_(_p?: number): List_o_toplevel_p_Context {
        if (_p === undefined) {
            _p = 0;
        }

        let parentContext = this.context;
        let parentState = this.state;
        let localContext = new List_o_toplevel_p_Context(this.context, parentState);
        let previousContext = localContext;
        let _startState = 2;
        this.enterRecursionRule(localContext, 2, TBNFParser.RULE_list_o_toplevel_p_, _p);
        try {
            let alternative: number;
            this.enterOuterAlt(localContext, 1);
            {
            {
            this.state = 107;
            localContext._list_o_toplevel_p__0__1 = this.toplevel();
             localContext!.result = <Array<definition_t>>[ localContext._list_o_toplevel_p__0__1.result ];
                        
            }
            this.context!.stop = this.tokenStream.LT(-1);
            this.state = 116;
            this.errorHandler.sync(this);
            alternative = this.interpreter.adaptivePredict(this.tokenStream, 0, this.context);
            while (alternative !== 2 && alternative !== antlr.ATN.INVALID_ALT_NUMBER) {
                if (alternative === 1) {
                    if (this.parseListeners != null) {
                        this.triggerExitRuleEvent();
                    }
                    previousContext = localContext;
                    {
                    {
                    localContext = new List_o_toplevel_p_Context(parentContext, parentState);
                    localContext._list_o_toplevel_p__2__1 = previousContext;
                    this.pushNewRecursionContext(localContext, _startState, TBNFParser.RULE_list_o_toplevel_p_);
                    this.state = 110;
                    if (!(this.precpred(this.context, 1))) {
                        throw this.createFailedPredicateException("this.precpred(this.context, 1)");
                    }
                    this.state = 111;
                    localContext._list_o_toplevel_p__2__2 = this.toplevel();
                     localContext!.result = <Array<definition_t>> addList<definition_t>(<Array<definition_t>> localContext._list_o_toplevel_p__2__1.result, <definition_t> localContext._list_o_toplevel_p__2__2.result);
                                          
                    }
                    }
                }
                this.state = 118;
                this.errorHandler.sync(this);
                alternative = this.interpreter.adaptivePredict(this.tokenStream, 0, this.context);
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.unrollRecursionContexts(parentContext);
        }
        return localContext;
    }
    public start__y_(): Start__y_Context {
        let localContext = new Start__y_Context(this.context, this.state);
        this.enterRule(localContext, 4, TBNFParser.RULE_start__y_);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 119;
            localContext._start__y__0__1 = this.list_o_toplevel_p_(0);
             localContext!.result = localContext._start__y__0__1.result;
                        
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public identstr(): IdentstrContext {
        let localContext = new IdentstrContext(this.context, this.state);
        this.enterRule(localContext, 6, TBNFParser.RULE_identstr);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 122;
            localContext._identstr_0__1 = this.match(TBNFParser.CNAMEPLUS);
             localContext!.result = <string> str(<antlr.Token> localContext._identstr_0__1);
                        
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public typ(): TypContext {
        let localContext = new TypContext(this.context, this.state);
        this.enterRule(localContext, 8, TBNFParser.RULE_typ);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 125;
            localContext._typ_0__1 = this.arrow_typ();
             localContext!.result = localContext._typ_0__1.result;
                        
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }

    public slist_o__i__s__i__s_param_type_p_(): Slist_o__i__s__i__s_param_type_p_Context;
    public slist_o__i__s__i__s_param_type_p_(_p: number): Slist_o__i__s__i__s_param_type_p_Context;
    public slist_o__i__s__i__s_param_type_p_(_p?: number): Slist_o__i__s__i__s_param_type_p_Context {
        if (_p === undefined) {
            _p = 0;
        }
